--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -51,6 +51,7 @@
 		"uuid": "8.3.2",
 		"vite": "3.1.0",
 		"vue": "3.2.45",
+		"vue-plyr": "^7.0.0",
 		"vue-prism-editor": "2.0.0-alpha.2",
 		"vuedraggable": "4.0.1",
 		"wavesurfer.js": "6.0.1"
