--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "foundkey",
-	"version": "13.0.0-preview6",
+	"version": "13.0.0-preview6-nullobsi",
 	"repository": {
 		"type": "git",
 		"url": "https://akkoma.dev/FoundKeyGang/FoundKey.git"
