--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "backend",
-	"version": "13.0.0-preview6",
+	"version": "13.0.0-preview6-nullobsi",
 	"main": "./index.js",
 	"private": true,
 	"type": "module",
