--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "client",
-	"version": "13.0.0-preview6",
+	"version": "13.0.0-preview6-nullobsi",
 	"private": true,
 	"scripts": {
 		"watch": "vite build --watch --mode development",
